--- a/cleint/package.json
+++ b/cleint/package.json
@@ -2,9 +2,12 @@
   "name": "cleint",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3002",
   "dependencies": {
     "@babel/core": "7.1.6",
     "@svgr/webpack": "2.4.1",
+    "antd": "^3.11.6",
+    "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -14,6 +17,8 @@
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
+    "classnames": "^2.2.6",
+    "connected-react-router": "^6.1.0",
     "css-loader": "^1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
@@ -27,11 +32,13 @@
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
+    "history": "^4.7.2",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "jwt-decode": "^2.2.0",
     "mini-css-extract-plugin": "0.4.3",
     "node-sass-chokidar": "^1.3.4",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -44,7 +51,15 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "recompose": "^0.30.0",
+    "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
+    "redux-form-antd": "^3.1.6",
+    "redux-observable": "^1.0.0",
     "resolve": "1.8.1",
+    "rxjs": "^6.0.0",
     "sass-loader": "^7.1.0",
     "scss-loader": "0.0.1",
     "style-loader": "0.23.0",
