--- a/microservices/images_microservice/package.json
+++ b/microservices/images_microservice/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon start.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +14,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.1",
+    "multer": "^1.4.1",
     "seneca": "^3.8.0-rc3",
     "seneca-web": "^2.2.1",
     "seneca-web-adapter-express": "^1.1.2"
